tests/toy/neg/000700_mutation.toylang
program a = { a = a then; } .
